
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct nm_reply {int string1; int uint2; int uint1; } ;
typedef int bool_t ;
typedef int XDR ;


 int FALSE ;
 int TRUE ;
 int xdr_u_int (int *,int *) ;
 int xdr_wrapstring (int *,int *) ;

bool_t
xdr_nm_reply(XDR *xdrs, struct nm_reply *objp)
{
    if (!xdr_u_int(xdrs, &objp->uint1))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint2))
 return (FALSE);
    if (!xdr_wrapstring(xdrs, &objp->string1))
 return (FALSE);
    return (TRUE);
}
